--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- seo + discord embed -->
-  <meta content="daniel" property="og:title" />
+  <meta content="bogusdeutschland" property="og:title" />
   <meta content="bogusdeutschland" property="og:description" />
   <meta content="https://jkb.lag.tf/bogusdeutschland" property="og:url" />
   <meta content="bogusdeutschland" name="description" />
